# dip-learn

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  version.py
.github/workflows/: ci.yaml  codeql.yaml  release.yaml
dip/: __init__.py  __version__.py
dip/annotated/: __init__.py  drawing.py
dip/augmentation/: __init__.py  augmentation.py
dip/cli/: __init__.py  main.py
dip/core/: __init__.py  operations.py  pipeline.py
dip/enhancement/: __init__.py  brightness.py  denoise.py
dip/filters/: __init__.py  edge.py  sharpening.py  skimage_filters.py  smoothing.py
dip/presets/: __init__.py  pipelines.py
dip/tests/: __init__.py  conftest.py  test_annotation.py  test_augmentation.py  test_core.py  test_enhancement.py  test_filters.py  test_transforms.py  test_web.py
dip/transforms/: __init__.py  color.py  geometric.py  histogram.py  morphology.py  threshold.py
dip/utils/: __init__.py  io.py  metrics.py  visualization.py
dip/web/: __init__.py  app.py  cli.py  components.py
